# python-stitch

./: .gitignore  README.md  pyproject.toml  pytest.ini
specs/: prd.md
src/stitch/: client.py  constants.py  extractor.py  fetchers.py  router.py
tests/: conftest.py  test_client.py  test_extractor.py  test_models.py  test_router.py
