[project]
name = "python-stitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pydantic",
    "msgspec",
    "cattrs",
    "pytest",
    "pre-commit",
    "coverage",
    "ipython",
    "ruff",
    "ty",
    "flask>=3.1.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src/stitch*"]

[tool.pyright]
include = ["src/stitch"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "stitch/experimental",
    "stitch/typestubs",
]
venvPath = ".venv"
venv = "stitch"
